[tool.poetry]
name = "repl-nix-markdownviewerpro-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
streamlit-option-menu = "^0.3.13"
weasyprint = "^62.3"
markdown = "^3.7"
streamlit-ace = "^0.1.1"
pygments = "^2.18.0"
markdown2 = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
